# EdDraft

./: README.md  pyproject.toml  requirements.txt
eddraft/: .env.example  main.py  utils.py
eddraft/configs/: projects.yaml
eddraft/logic/: logic_utils.py  project_posting.py
eddraft/templates/projects/: project_megathread_template.xml.jinja  project_partnering_template.xml.jinja  project_subthread_template.xml.jinja
