[project]
name = "eddraft"
version = "0.1.0"
description = "Template-driven EdStem thread drafting tool"
authors = [
    { name="Andrea Lou", email="andrea.lou@berkeley.edu" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "edapi>=0.1",
    "jinja2>=3.1",
]

[project.scripts]
eddraft = "eddraft.main:main"
